Fix add-on form spacing (#137)

--- a/resources/css/webapp.css
+++ b/resources/css/webapp.css
@@ -767,6 +767,10 @@ code {
 	cursor: pointer;
 }
 
+#addon-description-preview {
+	margin-bottom: 1.5vh;
+}
+
 #addon-description-preview,
 #addon-description-preview > p {
 	word-break: break-all;
